--- a/trunk/zemberek2/build.xml
+++ b/trunk/zemberek2/build.xml
@@ -403,7 +403,6 @@
 		<mkdir dir="${test.results}"/>
 
 		<junit haltonfailure="false" fork="true" failureproperty="tests.failed" printsummary="on">
-			<sysproperty key="basedir" value="${test.results}"/>
 			<formatter type="xml"/>
 			<formatter type="plain"/>
 			<formatter type="brief" usefile="false"/>
@@ -413,7 +412,7 @@
 				<pathelement path="${build.dir}/tr"/>
 				<pathelement path="${build.test}"/>
 			</classpath>
-			<batchtest>
+			<batchtest todir="${test.results}">
 				<fileset dir="${build.test}">
 					<include name="**/Test*.class"/>
 					<exclude name="**/TestGirdisi.class"/>
