--- a/trunk/mozzemberek/mozzemberek.config
+++ b/trunk/mozzemberek/mozzemberek.config
@@ -18,19 +18,19 @@
 #
 # ***** END LICENSE BLOCK *****
 
-MOZZEMBEREK_VERSION = 0.1.3
+MOZZEMBEREK_VERSION = 0.1.4
 
 # Supported Firefox versions
 MOZZEMBEREK_FF_MIN  = 3.0a1
-MOZZEMBEREK_FF_MAX  = 3.0.*
+MOZZEMBEREK_FF_MAX  = 3.5.*
 
 # Supported Thunderbird versions
 MOZZEMBEREK_TB_MIN  = 3.0a1
-MOZZEMBEREK_TB_MAX  = 3.0b2pre
+MOZZEMBEREK_TB_MAX  = 3.1a1pre
 
 # Supported SeaMonkey versions
 MOZZEMBEREK_SM_MIN  = 2.0a1
-MOZZEMBEREK_SM_MAX  = 2.0a3
+MOZZEMBEREK_SM_MAX  = 2.0b1
 
 # Supported Prism versions
 MOZZEMBEREK_PRISM_MIN  = 0.8
