--- a/mozzemberek/mozzemberek.config
+++ b/mozzemberek/mozzemberek.config
@@ -30,7 +30,7 @@ MOZZEMBEREK_TB_MAX  = 3.1a1pre
 
 # Supported SeaMonkey versions
 MOZZEMBEREK_SM_MIN  = 2.0a1
-MOZZEMBEREK_SM_MAX  = 2.0b1pre
+MOZZEMBEREK_SM_MAX  = 2.0.*
 
 # Supported Prism versions
 MOZZEMBEREK_PRISM_MIN  = 0.8
